--- a/GlucoMan.Mobile/GlucoMan.Mobile/HypoPredictionPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/HypoPredictionPage.xaml
@@ -19,6 +19,10 @@
                 <RowDefinition Height="20"/>
                 <RowDefinition />
                 <RowDefinition />
+                <RowDefinition Height="20"/>
+                <RowDefinition />
+
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -32,7 +36,7 @@
             <Button Grid.Row="0" Grid.Column="1" 
                     Clicked="btnNext_Click" Text="Next"></Button>
             <Button Grid.Row="0" Grid.Column="2" 
-                    Clicked="btnReadGlucose_Click" Text="Read gluc."></Button>
+                    Clicked="btnReadGlucose_Click" Text="Read g."></Button>
             <Button Grid.Row="0" Grid.Column="3" 
                     Clicked="btnPredict_Click" Text="Predict"></Button>
             <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" Text="Glucose for alarm" 
@@ -43,10 +47,8 @@
                     HorizontalTextAlignment="End" BackgroundColor="PaleGoldenrod"
                    IsEnabled="true"/>
             <Entry Grid.Row="2" Grid.Column="2" x:Name="txtAlarmAdvanceTime" Text="80" 
-                    HorizontalTextAlignment="End" BackgroundColor="PaleGoldenrod"
+                    HorizontalTextAlignment="End" BackgroundColor="DarkSeaGreen"
                    IsEnabled="true"/>
-            <Button Grid.Row="2" IsVisible="false" Grid.Column="3" 
-                    Clicked="btnPaste_Click" Text="Paste"></Button>
             <Label Grid.Row="3" Grid.ColumnSpan="3" Text="Measurements of glucose and time" 
                     XAlign="Center" YAlign="End"/>
             <Label Grid.Row="4" Grid.Column="0" Text="Glucose" XAlign="Center" YAlign="End"/>
@@ -85,8 +87,28 @@
                    YAlign="Center" XAlign="Center" BackgroundColor="SkyBlue"/>
             <Button Grid.Row="11" IsVisible="false" Grid.Column="3" 
                    Clicked="btnAlarm_Click" Text="Alarm"></Button>
-            <Label Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="4"
-                    x:Name="txtStatusBar" Text="" FontSize="Medium" BackgroundColor="red" TextColor="Yellow" 
+           
+            <Label Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="3" 
+                   Text="Calculation of a future value" XAlign="Start" YAlign="Center" />
+            <Button Grid.Row="12" Grid.Column="3" x:Name="btnCalcFutureGlucose"
+                    Clicked="btnCalcFutureGlucose_Click" Text="Calc."></Button>
+            
+            <Label Grid.Row="13" Grid.Column="0" Text="Time diff." XAlign="Center" />
+            <Label Grid.Row="13" Grid.Column="1" Grid.ColumnSpan="2" Text="Future time" XAlign="Center" />
+            <Label Grid.Row="13" Grid.Column="3" Text="Future gluc" XAlign="Center" />
+
+            <Entry Grid.Row="14" Grid.Column="0" x:Name="txtFutureTimeMinutes" Placeholder="min" 
+                   FontSize="Large" HorizontalTextAlignment ="End" BackgroundColor="DarkSeaGreen" />
+            <DatePicker Grid.Row="14" Grid.Column="1" x:Name="dtpTimeFutureDate" BackgroundColor="White"
+                        FontSize="Small" Format="yyyy-MM-dd" HorizontalOptions="Center"/>
+            <TimePicker Grid.Row="14" Grid.Column="2" x:Name="dtpTimeFutureTime" BackgroundColor="White"
+                        FontSize="Small" Format="HH:mm:ss" HorizontalOptions="Center" />
+            <Entry Grid.Row="14" Grid.Column="3" x:Name="txtFutureGlucose" Placeholder="gluc" 
+                   FontSize="Large" HorizontalTextAlignment ="End" BackgroundColor="SkyBlue" />
+
+            <Label Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="4"
+                    x:Name="txtStatusBar" Text="" FontSize="Medium" 
+                   BackgroundColor="red" TextColor="Yellow" 
                     YAlign="Center" XAlign="Center"/>
         </Grid>
     </ContentPage.Content>
