--- a/GlucoMan.Mobile/GlucoMan.Mobile/MealPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/MealPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GlucoMan.Mobile.MealPage">
+             x:Class="GlucoMan.Mobile.MealPage"
+             Title="Foods in a Meal">
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
@@ -20,7 +21,7 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Text="IdMeal" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="0" Grid.Column="1" Text="Type of Meal" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="0" Grid.Column="2" Text="Accuracy" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="0" Grid.Column="2" Text="Accuracy" Grid.ColumnSpan="2" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="0" Grid.Column="3" Text="" XAlign="Center" YAlign="End"/>
 
             <Entry Grid.Row="1" Grid.Column="0" x:Name="txtIdMeal" BackgroundColor="White" 
@@ -63,7 +64,7 @@
                 <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveMeal" ></Button>
             </Grid>
 
-            <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="Time" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="Food" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Text="Carbohydrates" XAlign="Center" YAlign="End"/>
             <ListView Grid.Row="5" Grid.ColumnSpan="4" x:Name="gridMeals" ItemsSource="{Binding}"
                       ItemSelected="OnSelection" >
@@ -76,7 +77,7 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="18"/>
                                     </Grid.RowDefinitions>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding TimeBegin.DateTime}"/>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding Name}"/>
                                     <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Carbohydrates.Double}"/>
                                 </Grid>
                             </ViewCell.View>
